fix dark mode in tailwind v4

--- a/reactLearn/learn-space/tailwind/input.css
+++ b/reactLearn/learn-space/tailwind/input.css
@@ -8,7 +8,7 @@
 /* header */
 
 .link-item {
-  @apply w-fit hover:border-b-2 hover:border-b-fuchsia-300 hover:shadow;
+  @apply w-fit hover:border-b-2 hover:border-b-fuchsia-300 hover:shadow dark:text-amber-50;
 }
 
 /* main */
@@ -18,15 +18,15 @@
 }
 
 .card {
-  @apply max-w-xs rounded bg-white p-2 shadow transition-transform duration-300 hover:scale-[1.01] hover:shadow-md lg:max-w-sm;
+  @apply max-w-xs rounded bg-white p-2 shadow transition-transform duration-300 hover:scale-[1.01] hover:shadow-md lg:max-w-sm dark:bg-gray-400;
 }
 
 .card-title {
-  @apply font-semibold;
+  @apply font-semibold dark:text-amber-50;
 }
 
 .card-desc {
-  @apply text-sm text-gray-600;
+  @apply text-sm text-gray-600 dark:text-white;
 }
 .card-footer {
   @apply mt-3 flex justify-between;
